--- a/css/style.css
+++ b/css/style.css
@@ -207,3 +207,70 @@ letter-spacing: 0.03em;
 
 color: rgba(255, 255, 255, 0.6);
 }
+.portfolio-btn{
+
+    font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
+/* identical to box height, or 162% */
+
+text-align: center;
+letter-spacing: 0.03em;
+
+color: #212121;
+background-color: #F5F4FA;
+
+}
+
+.portfolio-btn:hover,
+.portfolio-btn:focus{
+
+    background-color: #2196F3;
+    color: white;
+/* shadow-middle */
+
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+
+
+}
+
+
+.portfolio-title{
+
+
+    font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 2.0;
+
+
+letter-spacing: 0.06em;
+
+color: #212121;
+}
+
+.portfolio-text{
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    /* identical to box height, or 188% */
+    
+    letter-spacing: 0.03em;
+    
+    color: #757575;
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.88;
+/* identical to box height, or 188% */
+
+letter-spacing: 0.03em;
+
+color: #757575;
+    
+
+}
