--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,13 @@
 body{
     font-family: 'Roboto', sans-serif;
 }
-
 a{
     text-decoration:none;
     font-style: normal;
 }
-
 li{
     list-style: none;
 }
-
 .visually-hidden {
 position: absolute !important;
 clip: rect(1px 1px 1px 1px);
@@ -21,7 +18,6 @@ height: 1px !important;
 width: 1px !important;
 overflow: hidden;
 }
-
 .section-title{
 font-style: normal;
 font-weight: 700;
@@ -32,10 +28,13 @@ letter-spacing: 0.03em;
     
 color: #212121;
 }
-
 .link:hover,
 .link:focus{
     color: #2196F3;
+}
+
+.section{
+    margin-bottom: 94px;
 }
 
 .logo{
@@ -49,11 +48,9 @@ letter-spacing: 0.03em;
     
 color: #000000;
 }
-
 .span-logo{
 color: #2196F3;
 }
-
 /* Шапка сайту*/
 .menu{
 font-style: normal;
@@ -61,8 +58,16 @@ font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.02em;
-
 color: #212121;
+}
+
+.menu-list{
+    display: flex;
+
+}
+
+.menu-item{
+    margin-left: 50px;
 }
 
 
@@ -72,22 +77,16 @@ font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.02em;
-
 color: #757575;
 }
-
-
 /* Герой */
 .hero{
     background-color:#2F303A;
 }
-
 .hero-title{
 font-weight: 900;
-
 font-size: 44px;
 line-height: 1.36;   
-
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
@@ -100,7 +99,6 @@ font-style: normal;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.88;
-
 display: flex;
 align-items: center;
 text-align: center;
@@ -126,28 +124,27 @@ background-color: #2195f3b9;
 .advantages-title{
 font-style: normal;
 font-weight: 700;
-
 font-size: 14px;
 line-height: 1.14;
-
 letter-spacing: 0.03em;
 text-transform: uppercase;
     
 color: #212121;
 }
-
 .advantages-text{
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
-
 letter-spacing: 0.03em;
-
 color: #757575;
 }
 
 /* Чим ми займаємося  */
+
+.our-works-list{
+    display: flex;
+}
 
 /* Наша команда */
 
@@ -155,122 +152,48 @@ color: #757575;
     background-color: #F5F4FA;
 }
 
+.our-teem-list{
+    display: flex;
+}
+
 .our-teem-title{
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.18;
-
 text-align: center;
 letter-spacing: 0.03em;
-
 color: #212121;
 }
-
 .our-teem-text{
 font-style: normal;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.18;
-
 text-align: center;
 letter-spacing: 0.03em;
-
 color: #757575;
 }
-
 /* Футер */
 .footer{
     background-color: #2F303A;
 }
-
 .span-footer{
 color: #FFFFFF;
 }
-
 .address{
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
-
 color: #FFFFFF;
 }
-
 .footer-contakt{
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
-
 color: rgba(255, 255, 255, 0.6);
-}
-.portfolio-btn{
-
-    font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.62;
-/* identical to box height, or 162% */
-
-text-align: center;
-letter-spacing: 0.03em;
-
-color: #212121;
-background-color: #F5F4FA;
-
-}
-
-.portfolio-btn:hover,
-.portfolio-btn:focus{
-
-    background-color: #2196F3;
-    color: white;
-/* shadow-middle */
-
-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
-
-
-}
-
-
-.portfolio-title{
-
-
-    font-style: normal;
-font-weight: 700;
-font-size: 18px;
-line-height: 2.0;
-
-
-letter-spacing: 0.06em;
-
-color: #212121;
-}
-
-.portfolio-text{
-
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-    /* identical to box height, or 188% */
-    
-    letter-spacing: 0.03em;
-    
-    color: #757575;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.88;
-/* identical to box height, or 188% */
-
-letter-spacing: 0.03em;
-
-color: #757575;
-    
-
 }
