--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,9 @@ background-color: #2195f3b9;
 }
 
 /* Наші переваги */
-.advantages{}
+.advantages{
+    
+}
 
 .advantages-title{
 font-style: normal;
