--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Roboto', sans-serif;
 }
+
 a{
     text-decoration:none;
     font-style: normal;
@@ -9,7 +10,6 @@ a{
 li{
     list-style: none;
 }
-
 
 h1,
 h2,
@@ -23,9 +23,9 @@ margin-top: 0;
 }
 
 img{
-   display: block;
-   max-width: 100%;
-   height: auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .visually-hidden {
@@ -38,6 +38,7 @@ height: 1px !important;
 width: 1px !important;
 overflow: hidden;
 }
+
 .section-title{
 font-style: normal;
 font-weight: 700;
@@ -48,29 +49,42 @@ letter-spacing: 0.03em;
     
 color: #212121;
 }
+
 .link:hover,
 .link:focus{
     color: #2196F3;
 }
 
 .section{
-
-
-    padding-top: 94px;
+padding-top: 94px;
 padding-bottom: 94px;
-    
+}
+
+.container{
+width: 1200px;
+margin-left: auto;
+margin-right: auto;
+padding-left: 15px;
+padding-right: 15px;
+}
+ 
+.list {padding: 0;
+    margin: 0;
+    list-style: none;}
+
+
+/* header */
+.top-navigation{
+    display: flex;
 }
 
 
-.container{
-
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    }
+.main-nav{
     
+   
+    align-items: center;
+
+}
 
 .logo{
 font-family: 'Raleway';
@@ -82,10 +96,16 @@ line-height: 1.19;
 letter-spacing: 0.03em;
     
 color: #000000;
+
+padding-top: 24px;
+padding-bottom: 25px;
+
 }
+
 .span-logo{
 color: #2196F3;
 }
+
 /* Шапка сайту*/
 .menu{
 font-style: normal;
@@ -93,18 +113,28 @@ font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.02em;
+
 color: #212121;
 }
 
 .menu-list{
     display: flex;
-
+    margin-left: 93px;
+   
 }
 
 .menu-item{
     margin-left: 50px;
 }
 
+.list-contakts{
+    display: flex;
+    margin-left: auto;
+}
+
+.list-contakts >.item{
+    margin-left: 50px;
+}
 
 .header-contakt{
 font-style: normal;
@@ -112,21 +142,36 @@ font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 letter-spacing: 0.02em;
+
 color: #757575;
 }
+
+
 /* Герой */
 .hero{
     background-color:#2F303A;
+    padding-top: 200px;
+    padding-bottom: 200px;
+   
 }
+
 .hero-title{
 font-weight: 900;
+
 font-size: 44px;
 line-height: 1.36;   
+
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
+
+width: 696px;
     
 color: #FFFFFF;
+
+margin-left: auto;
+margin-right: auto;
+
 }
 
 .hero-btn{
@@ -134,6 +179,7 @@ font-style: normal;
 font-weight: 700;
 font-size: 16px;
 line-height: 1.88;
+
 display: flex;
 align-items: center;
 text-align: center;
@@ -146,6 +192,12 @@ background-color: #2196F3;
     border-radius: 4px;
 
 cursor: pointer;
+
+padding: 10px 24px;
+
+margin-left: auto;
+margin-right: auto;
+
 }
 
 .hero-btn:hover,
@@ -154,28 +206,47 @@ background-color: #2195f3b9;
 }
 
 /* Наші переваги */
-.advantages{
+.advantages{}
+
+
+.attention-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+
+
+
+
 
 }
-    
 
+.attention-list >.item{
+    flex-basis: calc((100% - 90px) / 4);
+
+    
+}
 
 .advantages-title{
 font-style: normal;
 font-weight: 700;
+
 font-size: 14px;
 line-height: 1.14;
+
 letter-spacing: 0.03em;
 text-transform: uppercase;
     
 color: #212121;
 }
+
 .advantages-text{
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
+
 letter-spacing: 0.03em;
+
 color: #757575;
 }
 
@@ -200,39 +271,94 @@ font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.18;
+
 text-align: center;
 letter-spacing: 0.03em;
+
 color: #212121;
 }
+
 .our-teem-text{
 font-style: normal;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.18;
+
 text-align: center;
 letter-spacing: 0.03em;
+
 color: #757575;
 }
+
 /* Футер */
 .footer{
     background-color: #2F303A;
 }
+
 .span-footer{
 color: #FFFFFF;
 }
+
 .address{
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
+
 color: #FFFFFF;
 }
+
 .footer-contakt{
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
+
 color: rgba(255, 255, 255, 0.6);
+}
+
+/* Портфоліо */
+
+.filter-btn{
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
+text-align: center;
+letter-spacing: 0.03em;
+
+background-color: #F5F4FA;
+border-radius: 4px;
+color: #212121;
+}
+
+.filter-btn:hover,
+.filter-btn:focus{
+color: white;
+background-color: #2196F3;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+
+}
+
+.portfolio-title{
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 2.0;
+letter-spacing: 0.06em;
+
+color: #212121;
+}
+
+.portfolio-text{
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.88;
+letter-spacing: 0.03em;
+
+color: #757575;
 }
