--- a/css/style.css
+++ b/css/style.css
@@ -259,9 +259,7 @@ color: #757575;
 
 /* Чим ми займаємося  */
 
-.our-works-list{
-    display: flex;
-}
+
 
 /* Наша команда */
 
@@ -271,9 +269,36 @@ color: #757575;
 
 .our-teem-list{
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
+
+
+
+.our-works-list{
+    display: flex;
+}
+
+.our-works-list > .item{
+    flex-basis: calc((100% - 60px) / 3);
+
+
+
+}
+
+.our-teem-list > .item{
+    flex-basis: calc((100% - 90px) / 3);
+
+
+
+
+}
+
+
+
 .our-teem-title{
+    padding: top 10px;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
@@ -299,10 +324,14 @@ color: #757575;
 
 /* Футер */
 .footer{
+    padding-top: 6opx;
+    padding-bottom: 60px;
     background-color: #2F303A;
+   
 }
 
 .span-footer{
+   
 color: #FFFFFF;
 }
 
