--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ img {
 
 .link:hover,
 .link:focus {
-    color: #2196F3;
+    color: #2196f3;
 }
 
 .section {
@@ -74,18 +74,13 @@ img {
     list-style: none;
 }
 
-
 /* header */
 .top-navigation {
     display: flex;
 }
 
-
 .main-nav {
-
-
     align-items: center;
-
 }
 
 .logo {
@@ -101,16 +96,13 @@ img {
 
     padding-top: 24px;
     padding-bottom: 25px;
-
 }
 
 .span-logo {
-    color: #2196F3;
+    color: #2196f3;
 }
 
 /* Шапка сайту*/
-
-
 
 .menu {
     display: block;
@@ -127,7 +119,6 @@ img {
 .menu-list {
     display: flex;
     margin-left: 93px;
-
 }
 
 .menu-item {
@@ -155,13 +146,11 @@ img {
     color: #757575;
 }
 
-
 /* Герой */
 .hero {
-    background-color: #2F303A;
+    background-color: #2f303a;
     padding-top: 200px;
     padding-bottom: 200px;
-
 }
 
 .hero-title {
@@ -176,11 +165,10 @@ img {
 
     width: 696px;
 
-    color: #FFFFFF;
+    color: #ffffff;
 
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .hero-btn {
@@ -194,9 +182,9 @@ img {
     text-align: center;
     letter-spacing: 0.06em;
 
-    color: #FFFFFF;
+    color: #ffffff;
 
-    background-color: #2196F3;
+    background-color: #2196f3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 
@@ -206,7 +194,6 @@ img {
 
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .hero-btn:hover,
@@ -217,22 +204,14 @@ img {
 /* Наші переваги */
 .advantages {}
 
-
 .attention-list {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-
-
-
-
-
 }
 
 .attention-list>.item {
     flex-basis: calc((100% - 90px) / 4);
-
-
 }
 
 .advantages-title {
@@ -261,12 +240,20 @@ img {
 
 /* Чим ми займаємося  */
 
+.our-works-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
 
+.our-works-list>.item {
+    flex-basis: calc((100% - 60px) / 3);
+}
 
 /* Наша команда */
 
 .our-teem {
-    background-color: #F5F4FA;
+    background-color: #f5f4fa;
 }
 
 .our-teem-list {
@@ -275,38 +262,11 @@ img {
     gap: 30px;
 }
 
-
-
-
-.our-works-list {
-    display: flex;
-}
-
-
-.our-works-list>.list {
-    flex-basis: calc((100% - 60px) / 3);
-}
-
-
-.our-works-list>.item {
-    flex-basis: calc((100% - 60px) / 3);
-
-
-
-}
-
 .our-teem-list>.item {
-    flex-basis: calc((100% - 90px) / 3);
-
-
-
-
+    flex-basis: calc((100% - 90px) / 4);
 }
-
-
 
 .our-teem-title {
-    padding: top 10px;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -316,6 +276,7 @@ img {
     letter-spacing: 0.03em;
 
     color: #212121;
+    margin-top: 30px;
 }
 
 .our-teem-text {
@@ -332,15 +293,13 @@ img {
 
 /* Футер */
 .footer {
-    padding-top: 6opx;
+    padding-top: 60px;
     padding-bottom: 60px;
-    background-color: #2F303A;
-
+    background-color: #2f303a;
 }
 
 .span-footer {
-
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .address {
@@ -350,7 +309,7 @@ img {
     line-height: 1.71;
     letter-spacing: 0.03em;
 
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .footer-contakt {
@@ -373,7 +332,7 @@ img {
     text-align: center;
     letter-spacing: 0.03em;
 
-    background-color: #F5F4FA;
+    background-color: #f5f4fa;
     border-radius: 4px;
     color: #212121;
 }
@@ -381,17 +340,17 @@ img {
 .filter-btn:hover,
 .filter-btn:focus {
     color: white;
-    background-color: #2196F3;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    background-color: #2196f3;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
-
 }
 
 .portfolio-title {
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
-    line-height: 2.0;
+    line-height: 2;
     letter-spacing: 0.06em;
 
     color: #212121;
