--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,24 @@ img {
 
 /* Портфоліо */
 
+.portfolio-btn {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.portfolio-btn>.item {
+
+    margin-left: 8px;
+}
+
+.portfolio-btn>.item {
+    flex-basis: calc((100% - 60px) / 3);
+
+
+}
+
+
 .filter-btn {
     font-style: normal;
     font-weight: 500;
@@ -335,7 +353,18 @@ img {
     background-color: #f5f4fa;
     border-radius: 4px;
     color: #212121;
+    padding: 6px 24px;
+    border: none;
 }
+
+.portfolio-list {
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+
 
 .filter-btn:hover,
 .filter-btn:focus {
@@ -347,6 +376,8 @@ img {
 }
 
 .portfolio-title {
+    margin-top: 20px;
+
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
