--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,11 @@ img {
 
 }
 
+.current {
+    color: #2196F3;
+
+}
+
 .menu-item {
     margin-left: 50px;
 }
@@ -277,6 +282,7 @@ img {
 
 .our-teem-list>.item {
     flex-basis: calc((100% - 90px) / 4);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
 
