--- a/css/style.css
+++ b/css/style.css
@@ -124,9 +124,23 @@ img {
 
 }
 
-.current {
+.nav.current {
+    position: relative;
+
     color: #2196F3;
 
+}
+
+.nav.current:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: -1px;
+
+    background-color: #2196F3;
+    border-radius: 2px;
 }
 
 .menu-item {
