--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,11 @@ img {
     display: flex;
 }
 
+.header-border {
+
+    border-bottom: 1px solid #eceeec;
+}
+
 .main-nav {
     display: flex;
     align-items: center;
@@ -124,14 +129,14 @@ img {
 
 }
 
-.nav.current {
+.menu.current {
     position: relative;
 
     color: #2196F3;
 
 }
 
-.nav.current:after {
+.menu.current:after {
     content: '';
     position: absolute;
     width: 100%;
@@ -400,6 +405,8 @@ img {
 
 .portfolio-list>.item {
     flex-basis: calc((100% - 60px) / 3);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+
 }
 
 .portfolio-title {
