--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,35 @@ img {
 
 .our-works-list>.item {
     flex-basis: calc((100% - 60px) / 3);
+    position: relative;
 }
+
+.our-work-bg {
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0px;
+
+    justify-content: center;
+    align-items: center;
+    display: flex;
+
+    background-color: rgba(47, 48, 58, 0.8);
+}
+
+
+
+.our-work-title {
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+}
+
 
 
 /* Наша команда */
