--- a/css/style.css
+++ b/css/style.css
@@ -525,6 +525,33 @@ img {
 
 }
 
+.project-thumb {
+    position: relative;
+    overflow: hidden;
+
+}
+
+.project-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms ease-in-out;
+    background: rgba(33, 150, 243, 0.90);
+
+
+}
+
+.project-link:hover .project-overlay,
+.project-link:focus .project-overlay {
+    transform: translateY(0);
+
+}
+
+.overlay-text {}
+
 .portfolio-title {
     margin-top: 20px;
 
