--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,8 @@ img {
 .link:hover,
 .link:focus {
     color: #2196F3;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .section {
@@ -77,6 +79,7 @@ img {
 /* header */
 .top-navigation {
     display: flex;
+
 }
 
 .header-border {
@@ -233,11 +236,13 @@ img {
     border-radius: 4px;
 
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
     background-color: #2195f3b9;
+
 }
 
 /* Наші переваги */
@@ -413,12 +418,15 @@ img {
     border-radius: 50%;
     fill: #afb1b8;
     background-color: #fff;
+    transition: fill, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .cocia-icon-link:hover,
 .cocia-icon-link:focus {
     fill: #fff;
     background-color: #2196f3;
+
 }
 
 /* наші клієнти */
@@ -438,6 +446,7 @@ img {
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
@@ -467,6 +476,7 @@ img {
 
 .customers-svg {
     fill: #afb1b8;
+    transition: fill 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-svg:hover,
@@ -536,6 +546,10 @@ img {
     background-color: #F5F4FA;
     border-radius: 4px;
     color: #212121;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
@@ -573,7 +587,7 @@ img {
     transform: translateY(100%);
     transition: transform 250ms ease-in-out;
     background: rgba(33, 150, 243, 0.90);
-
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -694,7 +708,7 @@ body.show-modal .modal {
     border-radius: 50%;
     background: transparent;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    transition: fill 250ms;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -745,6 +759,7 @@ body.show-modal .modal {
     border-radius: 4px;
     outline: none;
     cursor: pointer;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -833,6 +848,7 @@ body.show-modal .modal {
     display: flex;
     margin-left: auto;
     margin-right: auto;
+    transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-button:hover,
