--- a/css/style.css
+++ b/css/style.css
@@ -186,13 +186,13 @@ img {
 
 /* Герой */
 .hero {
-    background-color: #2F303A;
+
     padding-top: 200px;
     padding-bottom: 200px;
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
-    background-image: url(../images/Img\ \(1\).png);
+    background-image: linear-gradient(rgba(43, 74, 97, 0.87), rgba(43, 74, 97, 0.87)), url(../images/Img\ \(1\).png);
     text-align: center;
     background-position: center;
     background-repeat: no-repeat;
@@ -493,11 +493,19 @@ img {
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
-    background-color: #2F303A;
+    background-color: #2f303a;
+}
+
+footer>.container {
+    display: flex;
+}
+
+.widget-blok {
+    flex-basis: calc(50% - 15px);
 }
 
 .span-footer {
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .address {
@@ -507,7 +515,7 @@ img {
     line-height: 1.71;
     letter-spacing: 0.03em;
 
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .footer-contakt {
@@ -518,6 +526,90 @@ img {
     letter-spacing: 0.03em;
 
     color: rgba(255, 255, 255, 0.6);
+}
+
+.social-list-footer {
+    display: flex;
+    gap: 10px;
+}
+
+.social-link-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    fill: white;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link-footer:hover,
+.social-link-footer:focus {
+    fill: #fff;
+    background-color: #2196f3;
+}
+
+.footer-title {
+    color: #fff;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+
+    margin-bottom: 20px;
+}
+
+.footer-form {
+    display: flex;
+    gap: 12px;
+}
+
+.footer-input {
+    outline: none;
+    cursor: pointer;
+    width: 258px;
+    padding: 15px 10px;
+    border-radius: 4px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(33, 150, 243, 0);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-input:focus-within {
+    border-color: #2196f3;
+}
+
+.footer-btn {
+    color: #fff;
+    text-align: center;
+
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.87;
+
+    letter-spacing: 0.96px;
+    display: flex;
+    gap: 10px;
+    padding: 10px 28px;
+    border-radius: 4px;
+    background: #2196f3;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-btn:hover,
+.footer-btn:focus {
+    background-color: #2195f3b9;
+    cursor: pointer;
 }
 
 /* Портфоліо */
