--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h6,
 ul,
 p {
     margin-top: 0;
+    padding-left: 0;
 }
 
 img {
@@ -192,7 +193,7 @@ img {
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(rgba(43, 74, 97, 0.87), rgba(43, 74, 97, 0.87)), url(../images/Img\ \(1\).png);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.48), rgba(47, 48, 58, 0.48)), url(../images/Img\ \(1\).png);
     text-align: center;
     background-position: center;
     background-repeat: no-repeat;
@@ -398,7 +399,7 @@ img {
 }
 
 .cocial-icon-list {
-
+    padding-left: 0;
     display: flex;
     justify-content: center;
     padding-bottom: 30px;
@@ -544,6 +545,7 @@ footer>.container {
     background-color: rgba(255, 255, 255, 0.1);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .social-link-footer:hover,
