--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 @import './utils/utils.scss';
+@import './utils/colors';
 @import './components/container';
 @import './components/heder';
 @import './components/hero';
