--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ img {
 
 .hero-btn:hover,
 .hero-btn:focus {
-  background-color: rgba(33, 149, 243, 0.7254901961);
+  background-color: #2196F3;
 }
 
 /* Наші переваги */
@@ -387,7 +387,7 @@ img {
 .our-customers-list > .item:hover,
 .our-customers-list > .item:focus {
   cursor: pointer;
-  border-color: #2196f3;
+  border-color: #2196F3;
 }
 
 .our-customers-list > .item {
@@ -419,7 +419,7 @@ img {
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #2f303a;
+  background-color: #2F303A;
 }
 
 footer > .container {
@@ -472,7 +472,7 @@ footer > .container {
 .social-link-footer:hover,
 .social-link-footer:focus {
   fill: #fff;
-  background-color: #2196f3;
+  background-color: #2196F3;
 }
 
 .footer-title {
@@ -504,7 +504,7 @@ footer > .container {
 }
 
 .footer-input:focus-within {
-  border-color: #2196f3;
+  border-color: #2196F3;
 }
 
 .footer-btn {
@@ -519,14 +519,14 @@ footer > .container {
   gap: 10px;
   padding: 10px 28px;
   border-radius: 4px;
-  background: #2196f3;
+  background: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-btn:hover,
 .footer-btn:focus {
-  background-color: rgba(33, 149, 243, 0.7254901961);
+  background-color: #2196F3;
   cursor: pointer;
 }
 
@@ -702,8 +702,8 @@ body.show-modal .modal {
 
 .modal-btn:hover,
 .modal-btn:focus {
-  fill: #2196f3;
-  border-color: #2196f3;
+  fill: #2196F3;
+  border-color: #2196F3;
 }
 
 .modal-icon-close {
@@ -771,7 +771,7 @@ body.show-modal .modal {
 }
 
 .fit-back:focus-within {
-  border: 1px solid #2196f3;
+  border: 1px solid #2196F3;
 }
 
 .fit-back::placeholder {
@@ -814,7 +814,7 @@ body.show-modal .modal {
   line-height: 1.87;
   letter-spacing: 0.96px;
   border-radius: 4px;
-  background: #2196f3;
+  background: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   display: flex;
   margin-left: auto;
@@ -824,7 +824,7 @@ body.show-modal .modal {
 
 .modal-button:hover,
 .modal-button:focus {
-  color: #2196f3;
+  color: #2196F3;
   background-color: #fff;
 }
 
