--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -22,7 +22,7 @@
     height: 120px;
     flex-shrink: 0;
     border-radius: 4px;
-    background: #F5F4FA;
+    background: $advantages_svg;
 
 
 }
@@ -37,7 +37,7 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
 
-    color: #212121;
+    color: $minor;
 }
 
 .advantages-text {
@@ -48,5 +48,5 @@
 
     letter-spacing: 0.03em;
 
-    color: #757575;
+    color: $basic;
 }
