--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,7 +2,7 @@
 .footer {
     padding-top: 60px;
     padding-bottom: 60px;
-    background-color: #2f303a;
+    background-color: $background;
 }
 
 footer>.container {
@@ -59,7 +59,7 @@ footer>.container {
 .social-link-footer:hover,
 .social-link-footer:focus {
     fill: #fff;
-    background-color: #2196f3;
+    background-color: $accented;
 }
 
 .footer-title {
@@ -93,7 +93,7 @@ footer>.container {
 }
 
 .footer-input:focus-within {
-    border-color: #2196f3;
+    border-color: $accented;
 }
 
 .footer-btn {
@@ -110,7 +110,7 @@ footer>.container {
     gap: 10px;
     padding: 10px 28px;
     border-radius: 4px;
-    background: #2196f3;
+    background: $accented;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -118,6 +118,6 @@ footer>.container {
 
 .footer-btn:hover,
 .footer-btn:focus {
-    background-color: #2195f3b9;
+    background-color: $accented;
     cursor: pointer;
 }
