--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -45,7 +45,7 @@
 
     color: #FFFFFF;
 
-    background-color: #2196F3;
+    background-color: $accented;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 
@@ -55,6 +55,6 @@
 
 .hero-btn:hover,
 .hero-btn:focus {
-    background-color: #2195f3b9;
+    background-color: $accented;
 
 }
