--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -43,7 +43,7 @@ body.show-modal .modal {
 }
 
 .modal-title {
-    color: #212121;
+    color: $minor;
     text-align: center;
     font-size: 20px;
     font-style: normal;
@@ -72,13 +72,13 @@ body.show-modal .modal {
 
 .modal-btn:hover,
 .modal-btn:focus {
-    fill: #2196f3;
-    border-color: #2196f3;
+    fill: $accented;
+    border-color: $accented;
 }
 
 .modal-icon-close {
     width: 11px;
-    fill: #000000;
+    fill: $color_logo;
     height: 11px;
 }
 
@@ -99,7 +99,7 @@ body.show-modal .modal {
 }
 
 .form-label {
-    color: #757575;
+    color: $basic;
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
@@ -122,7 +122,7 @@ body.show-modal .modal {
 }
 
 .form-input:focus-within {
-    border-color: #2196F3;
+    border-color: $accented;
 }
 
 .modal-icon {
@@ -135,7 +135,7 @@ body.show-modal .modal {
 
 
 .modal-position:focus-within .modal-icon {
-    fill: #2196F3;
+    fill: $accented;
 }
 
 .fit-back {
@@ -150,7 +150,7 @@ body.show-modal .modal {
 }
 
 .fit-back:focus-within {
-    border: 1px solid #2196f3;
+    border: 1px solid $accented;
 
 }
 
@@ -173,7 +173,7 @@ body.show-modal .modal {
 }
 
 .span {
-    color: #757575;
+    color: $basic;
 
 
     font-size: 14px;
@@ -187,7 +187,7 @@ body.show-modal .modal {
 }
 
 .modal-link {
-    color: #2196F3;
+    color: $accented;
     text-decoration: underline;
 }
 
@@ -201,7 +201,7 @@ body.show-modal .modal {
     line-height: 1.87;
     letter-spacing: 0.96px;
     border-radius: 4px;
-    background: #2196f3;
+    background: $accented;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     display: flex;
     margin-left: auto;
@@ -211,7 +211,7 @@ body.show-modal .modal {
 
 .modal-button:hover,
 .modal-button:focus {
-    color: #2196f3;
+    color: $accented;
     background-color: #fff;
 }
 
