--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,11 @@ img {
 }
 
 /* header */
+.header {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
 .top-navigation {
   display: flex;
 }
@@ -91,8 +96,6 @@ img {
 }
 
 .logo {
-  padding-top: 24px;
-  padding-bottom: 25px;
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
@@ -107,21 +110,21 @@ img {
 }
 
 /* Шапка сайту*/
-.menu {
+.menu-list {
+  display: flex;
+  margin-left: 93px;
+}
+.menu-list__menu-item {
+  margin-left: 50px;
+}
+.menu-list__menu-link {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
   color: #212121;
-}
-
-.menu-list {
-  display: flex;
-  margin-left: 93px;
 }
 
 .menu.current {
@@ -140,23 +143,12 @@ img {
   border-radius: 2px;
 }
 
-.menu-item {
-  margin-left: 50px;
-}
-
 .list-contakts {
   display: flex;
   margin-left: auto;
 }
-
-.list-contakts > .item {
-  margin-left: 50px;
-}
-
-.header-contakt {
+.list-contakts__header-contakt {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -164,10 +156,13 @@ img {
   letter-spacing: 0.02em;
   color: #757575;
 }
-
-.svg-contact {
+.list-contakts__svg-contact {
   margin-right: 10px;
   fill: currentColor;
+}
+
+.list-contakts > .list-contakts__item {
+  margin-left: 50px;
 }
 
 /* Герой */
@@ -183,8 +178,7 @@ img {
   background-repeat: no-repeat;
   height: 600px;
 }
-
-.hero-title {
+.hero__hero-title {
   margin: 0 auto 30px;
   max-width: 696px;
   font-weight: 900;
@@ -195,8 +189,7 @@ img {
   text-transform: uppercase;
   color: #FFFFFF;
 }
-
-.hero-btn {
+.hero__hero-btn {
   padding: 10px 32px;
   margin-left: auto;
   margin-right: auto;
@@ -215,9 +208,7 @@ img {
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.hero-btn:hover,
-.hero-btn:focus {
+.hero__hero-btn:hover, .hero__hero-btn:focus {
   background-color: #2196F3;
 }
 
